fix footer on mobile

--- a/advocate_europe/assets/scss/core/_bootstrap-variables.scss
+++ b/advocate_europe/assets/scss/core/_bootstrap-variables.scss
@@ -5,6 +5,7 @@ $bootstrap-sass-asset-helper: false !default;
 
 //== Custom
 $footer-height: 120px;
+$footer-screen-sm-hight: 185px;
 $ae-light-gray: #f3f3f3;
 
 
